--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,24 @@
-<h2>Sign up</h2>
+<p>I would like to try out précis for two weeks and preview my restaurant
+as a précis site.</p>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
+  <p>I would like to sign in with my email address <%= f.text_field :email %>
+  and I want my password to be <%= f.password_field :password %> (yes, I'm
+  sure, I'll confirm here <%= f.password_field :password_confirmation %>).</p>
 
-  <p><%= f.label :name %><br />
-  <%= f.text_field :name %></p>
+  <p>My restaurant’s name is <%= f.text_field :name %>. Our opening hours
+  are <%= f.text_field :opening_hours %>. You can find us at
+  <%= f.text_field :street_address %>. If you’d like to make a
+  reservation, call us at <%= f.text_field :phone_number %>.</p>
 
-  <p><%= f.label :password %><br />
-  <%= f.password_field :password %></p>
+  <p>By the way my name is
+    <%= f.text_field :first_name %>
+    <%= f.text_field :last_name %>.</p>
 
-  <p><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></p>
-
-  <p><%= f.submit "Sign up" %></p>
+  <p><%= f.submit "Show me the site" %></p>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
