--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 
 <%- else -%>
   <%= link_to 'Login', new_user_session_path %>
+  <%= link_to 'Sign up', new_user_registration_path %>
 
 <%- end -%>
 
