--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,11 @@
 <body>
 
 <%- if user_signed_in? -%>
-  <p>Hey, you're logged in.</p>
-  <%= link_to 'Logout', destroy_user_session_path %>
+  <%= link_to 'Sign out', destroy_user_session_path %>
+  <%= link_to 'Edit website', edit_website_path %>
 
 <%- else -%>
-  <%= link_to 'Login', new_user_session_path %>
+  <%= link_to 'Sign in', new_user_session_path %>
   <%= link_to 'Sign up', new_user_registration_path %>
 
 <%- end -%>
