some wording changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <%= link_to 'Edit website', edit_website_path %>
 
 <%- else -%>
-  <%= link_to 'Sign in', new_user_session_path %>
-  <%= link_to 'Sign up', new_user_registration_path %>
+  <%= link_to 'Have an account already? Sign in.', new_user_session_path %>
+  <%= link_to 'Try précis', new_user_registration_path %>
 
 <%- end -%>
 
