--- a/public/prototype/style.css
+++ b/public/prototype/style.css
@@ -17,11 +17,11 @@ footer, header, hgroup, section {
 }
 a { margin:0; padding:0; font-size:100%; vertical-align:baseline; background:transparent; }
 
-body { font:20px/1.231 sans-serif; *font-size:small; } 
+body { font:20px sans-serif; *font-size:small; } 
 h1,h2,h3 { font-weight: bold; }
-html { overflow-y: scroll; }
+/* html { overflow-y: scroll; } */
 
-a:hover, a:active { outline: none; }
+/* a:hover, a:active { outline: none; } */
 a, a:active, a:visited { color: #607890; }
 a:hover { color: #036; }
 
@@ -33,10 +33,14 @@ a:link { -webkit-tap-highlight-color: #FF5E99; }
 
 /* Primary Styles */
 
-body { line-height: 1.5; } 
+body { line-height: 1.5; }
 
 header {
   margin: 2em 0 1em 0;
+}
+
+footer {
+  clear: both;
 }
 
 section {
