--- a/public/stylesheets/precis.css
+++ b/public/stylesheets/precis.css
@@ -1,7 +1,7 @@
 #precis { font-size: 13px; min-height: 2em; padding-left: 2em; }
 #precis h1 { font-size: 1.25em; float: left; padding-right: 1em; line-height: 2; }
 #precis li { list-style: none; float: left; padding-right: 1em; }
-#precis span.control {
+span.control {
   padding: 0.5em; display: inline-block;
   background-color: black;
   color: white; cursor: pointer;
@@ -9,4 +9,46 @@
 .ui-state-highlight {
   background: yellow;
   height: 300px;
+}
+section {
+  padding: 1px 1px 1px 1px;
+}
+#content section.editing h2,
+#content section.editing p {
+  margin-right: -20px;
+}
+#content section.editing {
+  width: 30%;
+  padding: 4px 9px 9px 9px;
+  margin: -4px 20px -9px -9px;
+  border: 1px #ccc solid;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: 5px 5px 5px #ccc;
+  -moz-box-shadow: 5px 5px 5px #ccc;
+  box-shadow: 5px 5px 5px #ccc;
+}
+.panel {
+  font-size: 13px;
+  padding-top: 0.5em;
+}
+.panel span.control {
+  font-weight: bold;
+  background: #999;
+  font-size: 13px;
+  margin-right: 0.5em;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+}
+.panel span.publish {
+  background: #6ec148;
+}
+.panel span.delete {
+  float: right;
+  background: #cf2332;
+}
+.panel span.control:hover {
+  text-decoration: underline;
 }
